강의편람 따오기 + 커스텀리스트뷰 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,5 @@
         <!-- splash -->
         <activity android:name=".add_schedule"></activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
