--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
+    //ted permission
+    compile 'gun0912.ted:tedpermission:1.0.3'
+    //jsoup
+    compile 'org.jsoup:jsoup:1.9.2'
 }
