--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //    글라이드 적용
+    //ted permission
+    //jsoup
     compile 'com.android.support:appcompat-v7:24.2.1'
-//    글라이드 적용
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:design:24.2.1'
-    testCompile 'junit:junit:4.12'
-    //ted permission
     compile 'gun0912.ted:tedpermission:1.0.3'
-    //jsoup
     compile 'org.jsoup:jsoup:1.9.2'
+    compile 'com.android.support:support-v4:24.2.1'
+    testCompile 'junit:junit:4.12'
 }
